Ayarlar ekranına koyu mod seçimi ve dil seçimi için seçenekler eklendi kodları yazıldı

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/main_background_color"
+        android:backgroundTint="@color/main_background_color"
+        app:itemIconTint="@color/bottom_navigation_icon_color"
+        app:itemTextColor="@color/bottom_navigation_text_color"
+        app:backgroundTint="@color/main_background_color"
+        app:itemBackground="@color/main_background_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
