--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,9 +3,10 @@
         <item name="android:statusBarColor">@color/status_bar_color</item>
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryDark">@color/primary_color</item>
-        <item name="android:colorPrimaryDark">@color/primary_color</item>
+        <item name="android:colorPrimaryDark">@color/status_bar_color</item>
         <item name="android:windowLightStatusBar">false</item>
-        <item name="android:colorBackground">@color/main_background_color</item>
+        <item name="colorControlActivated">@color/cursor_color</item>
+
     </style>
 
 </resources>
