--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,5 +42,10 @@
     <color name="score_differences_text_color">#646E72</color>
     <color name="onboarding_indicator_color">#4CAF50</color>
     <color name="logo_text_color">#23221F</color>
+    <color name="circular_icon_background_color">#4CAF50</color>
+    <color name="bottom_navigation_text_color">#000000</color>
+    <color name="bottom_navigation_icon_color">#000000</color>
+    <color name="spinner_background_color">#8C000000</color>
+
 
 </resources>
