Koyu mod ve dil seçimi hataları giderildi

--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -94,6 +94,7 @@
             android:layout_width="match_parent"
             android:backgroundTint="@color/cursor_color"
             android:text="@string/save_names"
+            android:textAllCaps="false"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -185,6 +186,7 @@
             style="@style/ButtonStyle"
             android:layout_width="0dp"
             android:text="@string/save"
+            android:textAllCaps="false"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -196,6 +198,7 @@
             style="@style/ButtonStyle"
             android:layout_width="0dp"
             android:text="@string/new_round"
+            android:textAllCaps="false"
             android:visibility="invisible"
             app:layout_constraintEnd_toStartOf="@+id/saveGame"
             app:layout_constraintHorizontal_bias="0.5"
