--- a/app/src/main/res/layout/fragment_choose_game.xml
+++ b/app/src/main/res/layout/fragment_choose_game.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/todo"
         android:src="@drawable/ic_logo"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintBottom_toTopOf="@+id/goToSaveSingleGameFragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -27,7 +27,12 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/custom_button"
+        app:drawableLeftCompat="@drawable/ic_player"
+        android:paddingStart="24dp"
+        android:paddingEnd="48dp"
+        android:gravity="center_vertical|center_horizontal"
         android:text="@string/single_game"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +46,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:background="@drawable/custom_button"
+        app:drawableLeftCompat="@drawable/ic_partner"
+        android:paddingStart="24dp"
+        android:paddingEnd="48dp"
         android:text="@string/partner_game"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goToSaveSingleGameFragment" />
@@ -52,7 +61,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:background="@drawable/custom_button"
+        app:drawableLeftCompat="@drawable/ic_settings"
+        android:paddingStart="24dp"
+        android:paddingEnd="48dp"
         android:text="@string/settings"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goToSavePartnerGameFragment" />
