--- a/app/src/main/res/layout/fragment_finished_game_view.xml
+++ b/app/src/main/res/layout/fragment_finished_game_view.xml
@@ -10,7 +10,6 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:id="@+id/view"
         android:layout_marginTop="8dp"
         android:layout_height="match_parent">
 
@@ -36,7 +35,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:tabIndicatorColor="@color/tab_indicator_color"
             app:tabSelectedTextColor="@color/tablayout_text_color"
-            app:tabTextColor="@color/tablayout_text_color" />
+            app:tabTextColor="@color/tablayout_text_color"
+            app:tabTextAppearance="@style/TablayoutTextAppearance"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
