--- a/app/src/main/res/layout/fragment_finished_partner_game.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game.xml
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:queryHint="Aramak için bir tarih veya takım adı yazınız"
+        app:queryHint="@string/search_team_hint"
         app:searchHintIcon="@drawable/ic_search"
         app:searchIcon="@drawable/ic_search"
         app:theme="@style/SearchViewStyle"
