--- a/app/src/main/res/layout/fragment_finished_single_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game_detail.xml
@@ -52,13 +52,14 @@
         <TextView
             android:id="@+id/teamNames"
             style="@style/HeaderTextViewStyle"
-            android:text="@string/players"
             android:layout_marginTop="16dp"
             android:paddingStart="10dp"
+            android:text="@string/players"
+            app:drawableLeftCompat="@drawable/ic_player"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolBar"
-            app:drawableLeftCompat="@drawable/ic_player"
             tools:ignore="RtlSymmetry" />
 
         <TextView
