--- a/app/src/main/res/layout/fragment_save_single_game.xml
+++ b/app/src/main/res/layout/fragment_save_single_game.xml
@@ -130,12 +130,12 @@
                 android:maxLength="21" />
         </com.google.android.material.textfield.TextInputLayout>
 
-
         <Button
             android:id="@+id/confirmNames"
             style="@style/ButtonStyle"
             android:layout_width="match_parent"
             android:text="@string/save_names"
+            android:textAllCaps="false"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -281,6 +281,7 @@
             android:layout_width="0dp"
             android:text="@string/save"
             android:visibility="invisible"
+            android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/newRound"
@@ -292,6 +293,7 @@
             android:layout_width="0dp"
             android:text="@string/new_round"
             android:visibility="invisible"
+            android:textAllCaps="false"
             app:layout_constraintEnd_toStartOf="@+id/saveGame"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
