--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:gravity="center_horizontal"
-        android:text="Türkçe"
+        android:text="@string/turkish"
         android:textSize="12sp"
         android:textStyle="normal"
         app:layout_constraintStart_toEndOf="@+id/view3"
@@ -43,7 +43,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@+id/goToChooseGameFragment"
-                android:text="Ayarlar"
+                android:text="@string/settings"
                 android:textColor="@color/toolbar_text_color"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -64,13 +64,13 @@
         app:layout_constraintTop_toBottomOf="@+id/toolBar">
 
         <ImageView
-            android:id="@+id/imageView1"
             android:layout_width="match_parent"
             android:layout_height="16dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:src="@drawable/ic_dark_mode" />
+            android:src="@drawable/ic_dark_mode"
+            android:contentDescription="@string/todo"/>
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -108,13 +108,14 @@
         app:layout_constraintTop_toBottomOf="@+id/view2">
 
         <ImageView
-            android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="16dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:src="@drawable/ic_language" />
+            android:src="@drawable/ic_language"
+            android:contentDescription="@string/todo"/>
+
     </androidx.cardview.widget.CardView>
 
     <TextView
