--- a/app/src/main/res/layout/language_dialog.xml
+++ b/app/src/main/res/layout/language_dialog.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#666666">
+    android:background="@color/dialog_shadow_color">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
