--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -43,7 +43,6 @@
     <color name="circular_icon_background_color">#4CAF50</color>
     <color name="bottom_navigation_text_color">#FFFFFF</color>
     <color name="bottom_navigation_icon_color">#FFFFFF</color>
-
-
+    <color name="dialog_shadow_color">#666666</color>
 </resources>
 
