Settings sayfasında tasarım değişikliği yapıldı

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,48 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources >
-    <color name="status_bar_color">#000000</color>
+    <color name="status_bar_color">#010101</color>
     <color name="white">#FFFFFF</color>
 
-    <color name="primary_color">#FFFFFF</color>
-    <color name="date_text_color">#FFFFFF</color>
-    <color name="info_text_color">#FFFFFF</color>
-    <color name="name_text_color">#FFFFFF</color>
-    <color name="score_text_color">#F5F5F5</color>
-    <color name="score_hint_text_color">#FFFFFF</color>
-    <color name="separator_color">#FFFFFF</color>
-    <color name="fab_icon_color">#FFFFFF</color>
-    <color name="error_text_color">#FFFFFF</color>
-    <color name="main_background_color">#000000</color>
+    <color name="primary_color">#F6F6F8</color>
+    <color name="date_text_color">#F6F6F8</color>
+    <color name="info_text_color">#F6F6F8</color>
+    <color name="name_text_color">#F6F6F8</color>
+    <color name="score_text_color">#F6F6F8</color>
+    <color name="score_hint_text_color">#F6F6F8</color>
+    <color name="separator_color">#F6F6F8</color>
+    <color name="fab_icon_color">#F6F6F8</color>
+    <color name="error_text_color">#F6F6F8</color>
+    <color name="main_background_color">#010101</color>
     <color name="button_text_color">#000000</color>
     <color name="icon_color">#646E72</color>
-    <color name="searchview_text_color">#FFFFFF</color>
+    <color name="searchview_text_color">#F6F6F8</color>
     <color name="delete_color">#FF0000</color>
     <color name="snackbar_background_color">#4CAF50</color>
-    <color name="snackbar_text_color">#FFFFFF</color>
-    <color name="toolbar_background_color">#000000</color>
-    <color name="cardview_background_color">#121212</color>
-    <color name="cardview_shadow_color">#FFFFFF</color>
-    <color name="toolbar_text_color">#FFFFFF</color>
-    <color name="alert_dialog_button_text_color">#FFFFFF</color>
-    <color name="text_input_layout_text_color">#FFFFFF</color>
-    <color name="text_input_layout_hint_color">#FFFFFF</color>
+    <color name="snackbar_text_color">#F6F6F8</color>
+    <color name="toolbar_background_color">#010101</color>
+    <color name="cardview_background_color">#1E1F22</color>
+    <color name="cardview_shadow_color">#F6F6F8</color>
+    <color name="toolbar_text_color">#F6F6F8</color>
+    <color name="alert_dialog_button_text_color">#F6F6F8</color>
+    <color name="text_input_layout_text_color">#F6F6F8</color>
+    <color name="text_input_layout_hint_color">#F6F6F8</color>
     <color name="text_input_layout_box_stroke_color">#4CAF50</color>
-    <color name="text_input_layout_counter_text_color">#FFFFFF</color>
+    <color name="text_input_layout_counter_text_color">#F6F6F8</color>
     <color name="cursor_color">#4CAF50</color>
-    <color name="tablayout_text_color">#FFFFFF</color>
-    <color name="back_icon_color">#FFFFFF</color>
+    <color name="tablayout_text_color">#F6F6F8</color>
+    <color name="back_icon_color">#F6F6F8</color>
     <color name="divider_color">#45494A</color>
     <color name="tab_indicator_color">#4CAF50</color>
     <color name="searchview_border_color">#45494A</color>
-    <color name="line_color_dark">#000000</color>
-    <color name="line_color_light">#000000</color>
-    <color name="header_text_color">#FFFFFF</color>
+    <color name="line_color_dark">#010101</color>
+    <color name="line_color_light">#010101</color>
+    <color name="header_text_color">#F6F6F8</color>
     <color name="header_background_color">#121212</color>
     <color name="onboarding_indicator_color">#4CAF50</color>
-    <color name="logo_text_color">#FFFFFF</color>
+    <color name="logo_text_color">#F6F6F8</color>
     <color name="circular_icon_background_color">#4CAF50</color>
-    <color name="bottom_navigation_text_color">#FFFFFF</color>
-    <color name="bottom_navigation_icon_color">#FFFFFF</color>
+    <color name="bottom_navigation_text_color">#F6F6F8</color>
+    <color name="bottom_navigation_icon_color">#F6F6F8</color>
     <color name="dialog_shadow_color">#666666</color>
+    <color name="dark_mode_text_color">#F6F6F8</color>
+    <color name="language_text_color">#F6F6F8</color>
+    <color name="selected_language_text_color">#F6F6F8</color>
+    <color name="settings_card_background_color">#1E1F22</color>
+    <color name="settings_card_divider_color">#F6F6F8</color>
+
 </resources>
 
