--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources >
-    <color name="status_bar_color">#FFFFFF</color>
-    <color name="white">#FFFFFF</color>
+    <color name="status_bar_color">#F6F6F8</color>
+    <color name="white">#F6F6F8</color>
 
     <color name="primary_color">#23221F</color>
     <color name="date_text_color">#45494A</color>
@@ -12,18 +12,18 @@
     <color name="separator_color">#45494A</color>
     <color name="fab_icon_color">#FFFFFF</color>
     <color name="error_text_color">#292F33</color>
-    <color name="main_background_color">#FFFFFFFF</color>
-    <color name="button_text_color">#FFFFFF</color>
+    <color name="main_background_color">#F6F6F8</color>
+    <color name="button_text_color">#F6F6F8</color>
     <color name="icon_color">#646E72</color>
     <color name="searchview_text_color">#292F33</color>
     <color name="delete_color">#FF0000</color>
     <color name="snackbar_background_color">#4CAF50</color>
-    <color name="snackbar_text_color">#FFFFFF</color>
-    <color name="toolbar_background_color">#FFFFFF</color>
+    <color name="snackbar_text_color">#F6F6F8</color>
+    <color name="toolbar_background_color">#F6F6F8</color>
     <color name="toolbar_text_color">#292F33</color>
-    <color name="cardview_background_color">#FFFFFF</color>
-    <color name="cardview_shadow_color">#000000</color>
-    <color name="alert_dialog_button_text_color">#000000</color>
+    <color name="cardview_background_color">#F6F6F8</color>
+    <color name="cardview_shadow_color">#010101</color>
+    <color name="alert_dialog_button_text_color">#010101</color>
     <color name="text_input_layout_text_color">#292F33</color>
     <color name="text_input_layout_hint_color">#292F33</color>
     <color name="text_input_layout_box_stroke_color">#4CAF50</color>
@@ -34,15 +34,22 @@
     <color name="divider_color">#45494A</color>
     <color name="searchview_border_color">#45494A</color>
     <color name="tab_indicator_color">#4CAF50</color>
-    <color name="line_color_dark">#FFFFFF</color>
-    <color name="line_color_light">#FFFFFF</color>
-    <color name="header_text_color">#FFFFFF</color>
+    <color name="line_color_dark">#F6F6F8</color>
+    <color name="line_color_light">#F6F6F8</color>
+    <color name="header_text_color">#F6F6F8</color>
     <color name="header_background_color">#45494A</color>
     <color name="score_differences_text_color">#646E72</color>
     <color name="onboarding_indicator_color">#4CAF50</color>
     <color name="logo_text_color">#23221F</color>
     <color name="circular_icon_background_color">#4CAF50</color>
-    <color name="bottom_navigation_text_color">#000000</color>
-    <color name="bottom_navigation_icon_color">#000000</color>
+    <color name="bottom_navigation_text_color">#010101</color>
+    <color name="bottom_navigation_icon_color">#010101</color>
     <color name="dialog_shadow_color">#666666</color>
+    <color name="dark_mode_text_color">#666666</color>
+    <color name="language_text_color">#666666</color>
+    <color name="selected_language_text_color">#666666</color>
+    <color name="settings_card_background_color">#F0F0F3</color>
+    <color name="settings_card_divider_color">#666666</color>
+
+
 </resources>
