Tekli oyuncu ceza ekleme işlemleri için başlangıç kodları yazıldı

--- a/app/src/main/res/layout/fragment_finished_game_view.xml
+++ b/app/src/main/res/layout/fragment_finished_game_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background_color"
-    tools:context=".ui.finishedGameView.FinishedGameViewFragment">
+    tools:context=".presentation.ui.finishedGameView.FinishedGameViewFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
