--- a/app/src/main/res/layout/add_penalty.xml
+++ b/app/src/main/res/layout/add_penalty.xml
@@ -10,7 +10,9 @@
         android:layout_marginStart="20dp"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:hint="Ceza giriniz"
+        android:hint="@string/enter_penalty"
+        android:inputType="number"
+        android:autofillHints=""
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
