--- a/app/src/main/res/layout/fragment_finished_partner_game.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background_color"
-    tools:context=".ui.finishedPartnerGame.FinishedPartnerGameFragment">
+    tools:context=".presentation.ui.finishedPartnerGame.FinishedPartnerGameFragment">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
