--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -6,7 +6,7 @@
     android:layout_marginBottom="60dp"
     android:background="@color/main_background_color"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.finishedPartnerGame.FinishedPartnerGameFragment">
+    tools:context=".presentation.ui.finishedPartnerGame.FinishedPartnerGameFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
