--- a/app/src/main/res/layout/single_game_round_item.xml
+++ b/app/src/main/res/layout/single_game_round_item.xml
@@ -3,60 +3,110 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/NameTextInputLayoutStyle"
-            app:boxStrokeWidth="0dp"
-            android:id="@+id/player1ScoreHint">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/player1Score"
-                    style="@style/ScoreTextInputEditTextStyle"/>
-        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.divider.MaterialDivider
-            style="@style/DividerStyle"
-            android:layout_width="0.3dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/NameTextInputLayoutStyle"
+                    app:boxStrokeWidth="0dp"
+                    android:id="@+id/player1ScoreHint">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/player1Score"
+                            style="@style/ScoreTextInputEditTextStyle"/>
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/NameTextInputLayoutStyle"
-            app:boxStrokeWidth="0dp"
-            android:id="@+id/player2ScoreHint">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/player2Score"
-                    style="@style/ScoreTextInputEditTextStyle"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.divider.MaterialDivider
+                    style="@style/DividerStyle"
+                    android:layout_width="0.3dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"/>
 
-        <com.google.android.material.divider.MaterialDivider
-            style="@style/DividerStyle"
-            android:layout_width="0.3dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"/>
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/NameTextInputLayoutStyle"
+                    app:boxStrokeWidth="0dp"
+                    android:id="@+id/player2ScoreHint">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/player2Score"
+                            style="@style/ScoreTextInputEditTextStyle"/>
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/NameTextInputLayoutStyle"
-            app:boxStrokeWidth="0dp"
-            android:id="@+id/player3ScoreHint">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/player3Score"
-                    style="@style/ScoreTextInputEditTextStyle"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.divider.MaterialDivider
+                    style="@style/DividerStyle"
+                    android:layout_width="0.3dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"/>
 
-        <com.google.android.material.divider.MaterialDivider
-            style="@style/DividerStyle"
-            android:layout_width="0.3dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"/>
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/NameTextInputLayoutStyle"
+                    app:boxStrokeWidth="0dp"
+                    android:id="@+id/player3ScoreHint">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/player3Score"
+                            style="@style/ScoreTextInputEditTextStyle"/>
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/NameTextInputLayoutStyle"
-            app:boxStrokeWidth="0dp"
-            android:id="@+id/player4ScoreHint">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/player4Score"
-                    style="@style/ScoreTextInputEditTextStyle"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.divider.MaterialDivider
+                    style="@style/DividerStyle"
+                    android:layout_width="0.3dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"/>
 
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/NameTextInputLayoutStyle"
+                    app:boxStrokeWidth="0dp"
+                    android:id="@+id/player4ScoreHint">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/player4Score"
+                            style="@style/ScoreTextInputEditTextStyle"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/playerPenalty1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:textColor="#FF0000"/>
+
+                <TextView
+                    android:id="@+id/playerPenalty2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:textColor="#FF0000"/>
+
+                <TextView
+                    android:id="@+id/playerPenalty3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:textColor="#FF0000"/>
+
+                <TextView
+                    android:id="@+id/playerPenalty4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:textColor="#FF0000" />
+        </LinearLayout>
 </LinearLayout>
