Eşli oyuncuların veritabanına ceza ekleme işlemleri ve toplam skora etki işlemleri tamamlandı

--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -184,14 +184,14 @@
         <Button
             android:id="@+id/saveGame"
             style="@style/ButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:text="@string/save"
             android:textAllCaps="false"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/newRound"
-            app:layout_constraintTop_toBottomOf="@id/scoreLayout" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newRound"/>
 
         <Button
             android:id="@+id/newRound"
@@ -200,10 +200,23 @@
             android:text="@string/new_round"
             android:textAllCaps="false"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/saveGame"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@id/penalty"
+            app:layout_constraintTop_toBottomOf="@+id/scoreLayout" />
+
+        <Button
+            android:id="@+id/penalty"
+            style="@style/ButtonStyle"
+            android:layout_width="0dp"
+            android:text="@string/penalty"
+            android:visibility="invisible"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toStartOf="@+id/newRound"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scoreLayout" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
