--- a/app/src/main/res/layout/partner_game_round_item.xml
+++ b/app/src/main/res/layout/partner_game_round_item.xml
@@ -4,36 +4,67 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:background="@color/main_background_color">
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/NameTextInputLayoutStyle"
-        app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
-        app:boxStrokeWidth="0dp"
-        android:id="@+id/team1ScoreHint">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/NameTextInputLayoutStyle"
+            app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
+            app:boxStrokeWidth="0dp"
+            android:id="@+id/team1ScoreHint">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/team1Score"
-            style="@style/ScoreTextInputEditTextStyle"
-            tools:ignore="DuplicateSpeakableTextCheck" />
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/team1Score"
+                style="@style/ScoreTextInputEditTextStyle"
+                tools:ignore="DuplicateSpeakableTextCheck" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.google.android.material.divider.MaterialDivider
-        style="@style/DividerStyle"
-        android:layout_width="0.3dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center_vertical"/>
+        <com.google.android.material.divider.MaterialDivider
+            style="@style/DividerStyle"
+            android:layout_width="0.3dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/NameTextInputLayoutStyle"
-        app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
-        app:boxStrokeWidth="0dp"
-        android:id="@+id/team2ScoreHint">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/team2Score"
-            style="@style/ScoreTextInputEditTextStyle" />
-    </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/NameTextInputLayoutStyle"
+            app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
+            app:boxStrokeWidth="0dp"
+            android:id="@+id/team2ScoreHint">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/team2Score"
+                style="@style/ScoreTextInputEditTextStyle" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/team1Penalty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="#FF0000"/>
+
+        <TextView
+            android:id="@+id/team2Penalty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="#FF0000"/>
+
+
+    </LinearLayout>
 </LinearLayout>
