--- a/app/src/main/res/layout/single_game_round_item.xml
+++ b/app/src/main/res/layout/single_game_round_item.xml
@@ -76,7 +76,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:gravity="end"
+                    android:gravity="center"
                     android:textColor="#FF0000"/>
 
                 <TextView
@@ -86,7 +86,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:gravity="end"
+                    android:gravity="center"
                     android:textColor="#FF0000"/>
 
                 <TextView
@@ -96,7 +96,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:gravity="end"
+                    android:gravity="center"
                     android:textColor="#FF0000"/>
 
                 <TextView
@@ -106,7 +106,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:gravity="end"
+                    android:gravity="center"
                     android:textColor="#FF0000" />
         </LinearLayout>
 </LinearLayout>
