--- a/app/src/main/res/layout/partner_game_round_item.xml
+++ b/app/src/main/res/layout/partner_game_round_item.xml
@@ -53,7 +53,7 @@
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:textColor="#FF0000"/>
+            android:textColor="@color/penalty_text_color"/>
 
         <TextView
             android:id="@+id/team2Penalty"
@@ -63,8 +63,6 @@
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:textColor="#FF0000"/>
-
-
+            android:textColor="@color/penalty_text_color"/>
     </LinearLayout>
 </LinearLayout>
