--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -119,6 +119,7 @@
             android:id="@+id/detailLabel"
             style="@style/HeaderTextViewStyle"
             android:text="@string/detail"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView"
