--- a/app/src/main/res/layout/single_game_round_item.xml
+++ b/app/src/main/res/layout/single_game_round_item.xml
@@ -12,6 +12,7 @@
             android:orientation="horizontal">
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/NameTextInputLayoutStyle"
+                    app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
                     app:boxStrokeWidth="0dp"
                     android:id="@+id/player1ScoreHint">
                         <com.google.android.material.textfield.TextInputEditText
@@ -27,6 +28,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/NameTextInputLayoutStyle"
+                    app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
                     app:boxStrokeWidth="0dp"
                     android:id="@+id/player2ScoreHint">
                         <com.google.android.material.textfield.TextInputEditText
@@ -42,6 +44,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/NameTextInputLayoutStyle"
+                    app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
                     app:boxStrokeWidth="0dp"
                     android:id="@+id/player3ScoreHint">
                         <com.google.android.material.textfield.TextInputEditText
@@ -57,6 +60,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/NameTextInputLayoutStyle"
+                    app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
                     app:boxStrokeWidth="0dp"
                     android:id="@+id/player4ScoreHint">
                         <com.google.android.material.textfield.TextInputEditText
@@ -70,43 +74,43 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/playerPenalty1"
+                    android:id="@+id/player1Penalty"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:textColor="#FF0000"/>
+                    android:textColor="@color/penalty_text_color"/>
 
                 <TextView
-                    android:id="@+id/playerPenalty2"
+                    android:id="@+id/player2Penalty"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:textColor="#FF0000"/>
+                    android:textColor="@color/penalty_text_color"/>
 
                 <TextView
-                    android:id="@+id/playerPenalty3"
+                    android:id="@+id/player3Penalty"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:textColor="#FF0000"/>
+                    android:textColor="@color/penalty_text_color"/>
 
                 <TextView
-                    android:id="@+id/playerPenalty4"
+                    android:id="@+id/player4Penalty"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:textColor="#FF0000" />
+                    android:textColor="@color/penalty_text_color"/>
         </LinearLayout>
 </LinearLayout>
