--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -125,6 +125,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:paddingTop">25dp</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:paddingBottom">-8dp</item>
 
     </style>
 
