--- a/app/src/main/res/layout/single_game_round_item.xml
+++ b/app/src/main/res/layout/single_game_round_item.xml
@@ -5,7 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -113,4 +112,15 @@
                     android:gravity="center"
                     android:textColor="@color/penalty_text_color"/>
         </LinearLayout>
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/horizontalDivider"
+            style="@style/DividerStyle"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="0.3dp"
+            android:layout_marginTop="4dp" />
+
+
 </LinearLayout>
